tests/ui/compile-flags/invalid/invalid-crate-name-suggestion-issue-159485.rs
// Invalid command-line crate names should suggest a sanitized replacement.

//@ compile-flags: --crate-name=my-crate

fn main() {}

//~? ERROR invalid character '-' in crate name
